--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "starterkit-mustache-materialdesign",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A Material Design starter kit for Pattern Lab",
+  "main": "README.md",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pattern-lab/starterkit-mustache-materialdesign.git"
